--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <label for="botPage"><code>Single page:&nbsp;</code></label>
       <input name="page" id="botPage" value="" placeholder="Page name" />
       <button type="submit" name="pageSubmit" id="PageSubmit" value="Process page" formaction="process_page.php">Process page</button>
-      <img style="display:none" src="spinner_18_18.gif" id="PageSpinner" alt="" />
+      <img style="display:none" src="spinner_18_18.gif" id="PageSpinner" alt="" aria-hidden="true" />
       <br />Separate multiple pages with a pipe (<code>Page 1|Page 2</code>)
     </p>
     <p>– or –</p>
@@ -35,7 +35,7 @@
       <label for="botCat"><code>Category:&nbsp;</code></label>
       <input name="cat" id="botCat" value="" placeholder="Category name" />
       <button type="submit" name="catSubmit" id="CatSubmit" value="Process category" formaction="category.php">Process pages in category</button>
-      <img style="display:none" src="spinner_18_18.gif" id="CatSpinner" alt="" />
+      <img style="display:none" src="spinner_18_18.gif" id="CatSpinner" alt="" aria-hidden="true" />
       <br />
     </p>
     <p>– or –</p>
@@ -43,7 +43,7 @@
       <label for="botLinked"><code>Linked pages:&nbsp;</code></label>
       <input name="linkpage" id="botLinked" value="" placeholder="Initial page name" />
       <button type="submit" name="linkedSubmit" id="LinkedSubmit" value="Process all linked" formaction="linked_pages.php">Process pages linked from</button>
-      <img style="display:none" src="spinner_18_18.gif" id="LinkSpinner" alt="" />
+      <img style="display:none" src="spinner_18_18.gif" id="LinkSpinner" alt="" aria-hidden="true" />
       <br />
     </p>
     <p>
@@ -62,7 +62,7 @@
       <a href="https://en.wikipedia.org/wiki/User:Citation_bot/use" title="Using Citation Bot">More&nbsp;details</a> |
       <a href="https://en.wikipedia.org/wiki/User_talk:Citation_bot" title="Report bugs at Wikipedia">Report&nbsp;bugs/suggestions</a> |
       <a href="https://github.com/ms609/citation-bot" title="GitHub repository">Source&nbsp;code</a> |
-      Recent&nbsp;<a href="https://en.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title=" English contributions">English</a>&nbsp;and&nbsp;<a href="https://simple.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent Simple contributions">Simple</a>&nbsp;edits
+      Recent&nbsp;<a href="https://en.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent English contributions" aria-label="Recent English contributions (opens in a new tab)" >English</a>&nbsp;and&nbsp;<a href="https://simple.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent Simple contributions" aria-label="Recent Simple contributions (opens in a new tab)" >Simple</a>&nbsp;edits
     </p>
     <p>
     Your Wikipedia username will be included in the edit, such as "Suggested&nbsp;by&nbsp;YourUserID"
