--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       <select name="wiki_base" id="wiki_base">
         <option value="en">&nbsp;en.wikipedia.org</option>
         <option value="simple">&nbsp;simple.wikipedia.org</option>
+        <option value="mk">&nbsp;mk.wikipedia.org</option>
+        <option value="mdwiki">&nbsp;MDWiki.org</option>
       </select>
     </p>
   </form>
@@ -62,7 +64,11 @@
       <a href="https://en.wikipedia.org/wiki/User:Citation_bot/use" title="Using Citation Bot">More&nbsp;details</a> |
       <a href="https://en.wikipedia.org/wiki/User_talk:Citation_bot" title="Report bugs at Wikipedia">Report&nbsp;bugs/suggestions</a> |
       <a href="https://github.com/ms609/citation-bot" title="GitHub repository">Source&nbsp;code</a> |
-      Recent&nbsp;<a href="https://en.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent English contributions" aria-label="Recent English contributions (opens in a new tab)" >English</a>&nbsp;and&nbsp;<a href="https://simple.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent Simple contributions" aria-label="Recent Simple contributions (opens in a new tab)" >Simple</a>&nbsp;edits
+      Recent edits on:
+      &nbsp;<a href="https://en.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent English contributions" aria-label="Recent English contributions (opens in a new tab)" >English</a>,
+      &nbsp;<a href="https://simple.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent Simple contributions" aria-label="Recent Simple contributions (opens in a new tab)" >Simple</a>,
+      &nbsp;<a href="https://mk.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent mk contributions" aria-label="Recent mk contributions (opens in a new tab)" >mk</a>,
+      &nbsp;<a href="https://mdwiki.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent mdwiki contributions" aria-label="Recent mdwiki contributions (opens in a new tab)" >mdwiki</a>
     </p>
     <p>
     Your Wikipedia username will be included in the edit, such as "Suggested&nbsp;by&nbsp;YourUserID"
