--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <option value="en">&nbsp;en.wikipedia.org</option>
         <option value="simple">&nbsp;simple.wikipedia.org</option>
         <option value="mk">&nbsp;mk.wikipedia.org</option>
+        <option value="ru">&nbsp;ru.wikipedia.org</option>
         <option value="mdwiki">&nbsp;MDWiki.org</option>
       </select>
     </p>
@@ -68,6 +69,7 @@
       &nbsp;<a href="https://en.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent English contributions" aria-label="Recent English contributions (opens in a new tab)" >English</a>,
       &nbsp;<a href="https://simple.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent Simple contributions" aria-label="Recent Simple contributions (opens in a new tab)" >Simple</a>,
       &nbsp;<a href="https://mk.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent mk contributions" aria-label="Recent mk contributions (opens in a new tab)" >mk</a>,
+      &nbsp;<a href="https://ru.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent ru contributions" aria-label="Recent ru contributions (opens in a new tab)" >ru</a>,
       &nbsp;<a href="https://mdwiki.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent mdwiki contributions" aria-label="Recent mdwiki contributions (opens in a new tab)" >mdwiki</a>
     </p>
     <p>
