--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <option value="simple">&nbsp;simple.wikipedia.org</option>
         <option value="mk">&nbsp;mk.wikipedia.org</option>
         <option value="ru">&nbsp;ru.wikipedia.org</option>
+        <option value="sr">&nbsp;sr.wikipedia.org</option>
         <option value="mdwiki">&nbsp;MDWiki.org</option>
       </select>
     </p>
@@ -70,6 +71,7 @@
       &nbsp;<a href="https://simple.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent Simple contributions" aria-label="Recent Simple contributions (opens in a new tab)" >Simple</a>,
       &nbsp;<a href="https://mk.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent mk contributions" aria-label="Recent mk contributions (opens in a new tab)" >mk</a>,
       &nbsp;<a href="https://ru.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent ru contributions" aria-label="Recent ru contributions (opens in a new tab)" >ru</a>,
+      &nbsp;<a href="https://sr.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent sr contributions" aria-label="Recent sr contributions (opens in a new tab)" >sr</a>,
       &nbsp;<a href="https://mdwiki.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent mdwiki contributions" aria-label="Recent mdwiki contributions (opens in a new tab)" >mdwiki</a>
     </p>
     <p>
