--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <option value="ru">&nbsp;ru.wikipedia.org</option>
         <option value="sr">&nbsp;sr.wikipedia.org</option>
         <option value="mdwiki">&nbsp;MDWiki.org</option>
+        <option value="vi">&nbsp;vi.wikipedia.org</option>
       </select>
     </p>
   </form>
@@ -72,6 +73,7 @@
       &nbsp;<a href="https://mk.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent mk contributions" aria-label="Recent mk contributions (opens in a new tab)" >mk</a>,
       &nbsp;<a href="https://ru.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent ru contributions" aria-label="Recent ru contributions (opens in a new tab)" >ru</a>,
       &nbsp;<a href="https://sr.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent sr contributions" aria-label="Recent sr contributions (opens in a new tab)" >sr</a>,
+      &nbsp;<a href="https://vi.wikipedia.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent vi contributions" aria-label="Recent vi contributions (opens in a new tab)" >vi</a>,
       &nbsp;<a href="https://mdwiki.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent mdwiki contributions" aria-label="Recent mdwiki contributions (opens in a new tab)" >mdwiki</a>
     </p>
     <p>
