--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
  <body>
   <header>
     <h1>Wikipedia citation bot</h1>
-    <p>Populates empty fields in {{cite journal}} family templates, and fix other citation issues.</p>
+    <p>Populates empty fields in {{cite journal}} family templates, and fixes other citation issues.</p>
   </header>
   <main>
   <form id="botForm" action="process_page.php" method="post">
     <p>
       <input type="checkbox" name="slow" id="slow" checked />
-      <label for="slow">Thorough mode - a slower, but more exhaustive, search. Finds bibcodes and expands URLs.</label>
+      <label for="slow">Thorough mode - a slower but more exhaustive search. Finds bibcodes and expands URLs.</label>
     </p>
     <p>
       <input type="hidden" name="edit" id="edit" value="webform" />
@@ -76,7 +76,7 @@
       &nbsp;<a href="https://mdwiki.org/wiki/Special:Contributions/Citation_bot" target="_blank" title="Recent mdwiki contributions" aria-label="Recent mdwiki contributions (opens in a new tab)" >mdwiki</a>
     </p>
     <p>
-    Your Wikipedia username will be included in the edit, such as "Suggested&nbsp;by&nbsp;YourUserID"
+    Your Wikipedia username will be included in the edit, such as: "Suggested&nbsp;by&nbsp;YourUserID"
     </p>
   </footer>
  </body>
